@@ -11,6 +11,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserService implements IUserService {
@@ -32,8 +33,9 @@ public class UserService implements IUserService {
         user.setPhone(registrationDto.getPhone());
         user.setPassword(passwordEncoder.encode(registrationDto.getPassword()));
 
-        AppRole role = roleRepository.findByName(registrationDto.getUserRole().getDisplayName());
-        user.setRoles(Collections.singletonList(role));
+        AppRole userRole = roleRepository.findByName("USER");
+        AppRole role = roleRepository.findByName(registrationDto.getUserRole().toString());
+        user.setRoles(List.of(userRole, role));
         userRepository.save(user);
     }
 
